{
    "name": "ControllerInput",
    "maps": [
        {
            "name": "Player",
            "id": "cc3eca78-b394-4bf0-9366-a828bf09d5d3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "caac699e-fd85-4b6a-9f83-733d2cd9915e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f51e01de-9331-41be-aa04-7d39d06f9fd6",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "d52aaeee-8410-4760-b899-21fab75d7ed0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5c38ad0c-88d8-49e4-a09b-ae89f5cdb124",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c463582e-af70-407c-9240-aab753bf52ed",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b9ceed1d-292d-4e7e-a9b6-1c4f13968108",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "eb666429-0905-4e1a-aa53-978a7a74213d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Rotate",
            "id": "4b23967c-62b6-4b8b-918a-5271815cdf31",
            "actions": [
                {
                    "name": "CamR",
                    "type": "Button",
                    "id": "fbc355fe-139b-464e-9c6f-07917e11342c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamL",
                    "type": "Button",
                    "id": "61cc7791-447a-4610-98cf-1eb29519c2de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ea4ff1a-bfd6-4429-853d-d394c22bb424",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbda6c31-8b70-404d-aa73-33ba689ee5ef",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamL",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "c4c350f3-3b39-4a67-8a1b-2705becb68c3",
            "actions": [
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "eb22b4e0-fe42-498e-8bb5-5e70c39efee0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PushABotton",
                    "type": "Button",
                    "id": "0c9b923d-ea77-4bb9-8bde-16591955c7c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PushBBotton",
                    "type": "Button",
                    "id": "2d50971a-5a37-4aae-a3c9-faedbf983654",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ad034f68-129f-45cd-a518-8570bfe137e2",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bcfbfb61-0fc0-446f-8099-3743bae6a3aa",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PushABotton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f486fb17-2345-4c5c-8440-fa82c12cfe27",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PushBBotton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}